--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.9.0",
+    "@adonisjs/lucid": "^18.4.2",
     "@adonisjs/repl": "^3.1.11",
     "@adonisjs/session": "^6.4.0",
     "@adonisjs/shield": "^7.1.1",
@@ -72,12 +73,14 @@
     "@inertiajs/inertia-react": "^0.8.1",
     "@inertiajs/react": "^1.0.14",
     "@types/react-dom": "^18.2.15",
+    "luxon": "^3.4.3",
     "proxy-addr": "^2.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.18.0",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21",
+    "sqlite3": "^5.1.6",
     "webpack-node-externals": "^3.0.0"
   }
 }
