--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,8 @@
       "@adonisjs/view",
       "@adonisjs/shield",
       "@japa/preset-adonis/build/adonis-typings",
-      "@eidellev/inertia-adonisjs"
+      "@eidellev/inertia-adonisjs",
+      "@adonisjs/lucid"
     ]
   }
 }
